syntax = "proto3";

package risk.v1;

import "risk/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/risk/v1;v1";

service RiskService {
  rpc CheckRisk(CheckRiskRequest) returns (CheckRiskResponse) {};
  rpc SetRiskLimit(SetRiskLimitRequest) returns (SetRiskLimitResponse) {};
  
  // Enhanced Risk Assessment
  rpc AssessRisk(AssessRiskRequest) returns (AssessRiskResponse) {};
  rpc GetRiskMetrics(GetRiskMetricsRequest) returns (GetRiskMetricsResponse) {};
  rpc CheckRiskLimit(CheckRiskLimitRequest) returns (CheckRiskLimitResponse) {};
  rpc GetRiskAlerts(GetRiskAlertsRequest) returns (GetRiskAlertsResponse) {};

  // Portfolio & Monte Carlo Risk Analytics
  rpc CalculatePortfolioRisk(CalculatePortfolioRiskRequest) returns (CalculatePortfolioRiskResponse) {};
  rpc CalculateMonteCarloRisk(MonteCarloRiskRequest) returns (MonteCarloRiskResponse) {};
  
  // Stress Testing & Anomaly Detection
  rpc RunStressTest(RunStressTestRequest) returns (RunStressTestResponse) {};
  rpc GetAnomalyReport(GetAnomalyReportRequest) returns (GetAnomalyReportResponse) {};
}

message CheckRiskRequest {
  string user_id = 1;
  string symbol = 2;
  string side = 3; // "buy" or "sell"
  double price = 4;
  double quantity = 5;
}

message CheckRiskResponse {
  bool passed = 1;
  string reason = 2; // If not passed
}

message SetRiskLimitRequest {
  string user_id = 1;
  double max_order_size = 2;
  double max_daily_loss = 3;
}

message SetRiskLimitResponse {
  bool success = 1;
}

message AssessRiskRequest {
  string user_id = 1;
  string symbol = 2;
  string side = 3;
  string quantity = 4; // Decimal string
  string price = 5; // Decimal string
}

message AssessRiskResponse {
  bool is_allowed = 1;
  string reason = 2;
  string risk_level = 3;
  string margin_requirement = 4;
  string risk_score = 5;
}

message GetRiskMetricsRequest {
  string user_id = 1;
}

message RiskMetrics {
  string var_95 = 1;
  string var_99 = 2;
  string max_drawdown = 3;
  string sharpe_ratio = 4;
  string correlation = 5;
}

message GetRiskMetricsResponse {
  RiskMetrics metrics = 1;
}

message CheckRiskLimitRequest {
  string user_id = 1;
  string limit_type = 2;
}

message CheckRiskLimitResponse {
  string limit_type = 1;
  string limit_value = 2;
  string current_value = 3;
  string remaining = 4;
  bool is_exceeded = 5;
}

message GetRiskAlertsRequest {
  string user_id = 1;
  int32 limit = 2;
}

message RiskAlert {
  string alert_id = 1;
  string alert_type = 2;
  string severity = 3;
  string message = 4;
  int64 timestamp = 5;
}

message GetRiskAlertsResponse {
  repeated RiskAlert alerts = 1;
}

message PositionLiquidationTriggeredEvent {
  string user_id = 1;
  string account_id = 2;
  string symbol = 3;
  string side = 4;
  double quantity = 5;
  double margin_level = 6;
  string trigger_reason = 7;
  int64 triggered_at = 8;
}

// --- Portfolio Risk ---

message PortfolioAsset {
  string symbol = 1;
  string position = 2; // Decimal string
  string current_price = 3; // Decimal string
  double volatility = 4;
  double expected_return = 5;
}

message CorrelationRow {
  repeated double values = 1;
}

message CalculatePortfolioRiskRequest {
  repeated PortfolioAsset assets = 1;
  repeated CorrelationRow correlation_matrix = 2;
  double time_horizon = 3;
  int32 simulations = 4;
  double confidence_level = 5;
}

message PortfolioGreeks {
  string delta = 1;
  string gamma = 2;
  string vega = 3;
  string theta = 4;
}

message CalculatePortfolioRiskResponse {
  string total_value = 1;
  string var_value = 2;
  string es_value = 3;
  map<string, string> component_var = 4;
  string diversification = 5;
  map<string, string> stress_tests = 6;
  map<string, PortfolioGreeks> greeks = 7;
}

// --- Monte Carlo Risk ---

message MonteCarloRiskRequest {
  double s = 1;
  double mu = 2;
  double sigma = 3;
  double t = 4;
  int32 iterations = 5;
  int32 steps = 6;
}

message MonteCarloRiskResponse {
  string var_95 = 1;
  string var_99 = 2;
  string es_95 = 3;
  string es_99 = 4;
}

// --- Stress Testing ---

message RunStressTestRequest {
  string scenario_name = 1; // e.g., "GLOBAL_FINANCIAL_CRISIS", "FLASH_CRASH"
  repeated PortfolioAsset assets = 2;
}

message StressTestResult {
  string scenario_name = 1;
  string pnl_impact = 2;
  string percentage_drop = 3;
  bool survived = 4; // Did it exceed critical risk level
}

message RunStressTestResponse {
  repeated StressTestResult results = 1;
}

// --- Anomaly Detection ---

message GetAnomalyReportRequest {
  string user_id = 1;
  int64 start_time = 2;
  int64 end_time = 3;
}

message AnomalyRecord {
  string type = 1; // "WASH_TRADING", "SPOOFING", "LAYERING"
  string symbol = 2;
  string reason = 3;
  string confidence_score = 4;
  int64 timestamp = 5;
}

message GetAnomalyReportResponse {
  repeated AnomalyRecord anomalies = 1;
}
